--- a/codinglabs/Lab01COMM187Fall2024.ipynb
+++ b/codinglabs/Lab01COMM187Fall2024.ipynb
@@ -5,7 +5,7 @@
    "id": "533ac834-ae77-4da2-b96b-de2be9ef1089",
    "metadata": {},
    "source": [
-    "# COMM 187 (160DS): Data Science in Communication Research -- Spring 2024\n",
+    "# COMM 187 (160DS): Data Science in Communication Research -- Fall 2024\n",
     "\n",
     "## Coding Lab #1: Introduction to Python and Jupyterhub\n",
     "**Wednesday, Oct 2, 2024**"
