--- a/assignments/DemoAssignmentCOMM187Fall2024.ipynb
+++ b/assignments/DemoAssignmentCOMM187Fall2024.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COMM187: Data Science in Communication Research, Spring 2024 -- Demo-Assignment"
+    "# COMM187: Data Science in Communication Research, Fall 2024 -- Demo-Assignment"
    ]
   },
   {
