--- a/assignments/Assignment02_COMM187Fall2024.ipynb
+++ b/assignments/Assignment02_COMM187Fall2024.ipynb
@@ -476,7 +476,7 @@
          "locked": false
         },
         {
-         "code": ">>> len(ig_random_20_by5) == 100\nFalse",
+         "code": ">>> len(ig_random_20_by5) == 20\nTrue",
          "hidden": false,
          "locked": false
         },
@@ -592,7 +592,7 @@
          "locked": false
         },
         {
-         "code": ">>> ig_list_later == [80, 190, 120]\nTrue",
+         "code": ">>> ig_list_later == [80, 190, 140]\nTrue",
          "hidden": false,
          "locked": false
         }
@@ -616,7 +616,7 @@
          "locked": false
         },
         {
-         "code": ">>> ig_list_updated == [100, 120, 25, 105, 165, 110, 115, 80, 190, 120]\nTrue",
+         "code": ">>> ig_list_updated == [100, 120, 25, 105, 165, 110, 115, 80, 190, 140]\nTrue",
          "hidden": false,
          "locked": false
         }
